# dice-roller

./: .gitignore  Cargo.toml  Makefile  README.md  commands.txt
src/: builders.rs  cli.rs  enums.rs  main.rs  result_keeping_rules.rs  roll_command.rs  roll_result.rs  success_counting_rules.rs  traits.rs  utils.rs
src/dice_rolling_logic/: mod.rs  result_keeping_rules.rs  roll_command.rs  roll_result.rs  success_counting_rules.rs
src/display_logic/: builders.rs  cli.rs  mod.rs  roll_result.rs
