[package]
name = "dice-roller"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
comfy-table = "7.1.1"
rand = "0.9.0-alpha.2"
regex = "1.10.6"

[profile.release]
opt-level = "s"         # Optimize for both size and speed
lto = "fat"             # Better LTO optimization
panic = "abort"         # Abort on panic to reduce size
codegen-units = 1       # Single codegen unit for more efficient LTO